tests/test_struct/bad/empty_struct.catala_en
## Test

```catala
declaration structure Foo:

declaration scope Bar:
  internal foo content Foo
```

```catala-test {id="Typecheck"}
catala Typecheck 
```
